--- a/EventManagment.Blazor/_Imports.razor
+++ b/EventManagment.Blazor/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using EventManagmentSolution.Blazor
-@using EventManagmentSolution.Blazor.Layout
+@using EventManagment.Blazor
+@using EventManagment.Blazor.Layout
